Used Integer.valueOf instead of creating new object.