@@ -345,7 +345,7 @@ final class Toolbar extends JToolBar implements ActionListener {
 		bnetarea.setEnabled(enable1D);
 		isSyncEvent = true;
 		/* Convert double to int string */
-		final String strBinWidth = new Integer(new Double(binWidth).intValue())
+		final String strBinWidth = Integer.valueOf(new Double(binWidth).intValue())
 				.toString();
 		comboBinRatio.setSelectedIndex(0);
 		for (int i = 0; i < REBIN_RATIOS.length; i++) {
